src/app/(frontend)/(pages)/case-studies/[slug]/index.module.scss
@use '@scss/common' as *;

.featuredImage {
  width: 150%;
  height: auto;
}

.content {
  display: flex;
  flex-direction: column;
  gap: 4rem;

  @include mid-break {
    gap: 0;
  }
}

.metaWrapper {
  max-width: calc(var(--column) * 4);

  @include mid-break {
    display: flex;
    flex-wrap: wrap;
    margin-block: 2rem;
    max-width: calc(var(--column) * 8);
  }
}

.metaItem {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  border-top: 1px solid var(--theme-border-color);
  border-bottom: none;
  padding: 1rem 1.5rem;
  gap: 0.5rem;
  text-decoration: none;

  p {
    transition: opacity 0.2s ease;
  }

  &:last-child {
    border-bottom: 1px solid var(--theme-border-color);
  }

  &:hover {
    p {
      opacity: 0.5;
    }

    .arrow {
      opacity: 1;
      transform: translate(0.25rem, calc(-50% - 0.25rem));
    }
  }
}

.metaLabel {
  @include h6;
  & {
    text-transform: uppercase;
    margin-block: 0;
  }
}

.arrow {
  position: absolute;
  top: 50%;
  right: 1.5rem;
  opacity: 1;
  transform: translate(0, -50%);
  transition:
    opacity 0.2s ease,
    transform 0.2s ease;
}

.metaValue {
  margin: 0;
}

